--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-Hello World
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+<link rel="stylesheet" type="text/css" href="style/style.css" />
+<title>Playrec - What is Playrec?</title>
+<!--[if lt IE 9]>
+<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
+</head>
+<body>
+<div id="container">
+<div id="header">
+<h1><a href="index.html">Playrec</a></h1>
+<h2><a href="index.html">Multi-channel Matlab Audio</a></h2>
+<div id="menu">
+<ul id="navlist">
+<li class="selected"><a href="index.html">Home</a></li>
+<li><a href="compiling.html">Getting&nbsp;Started</a></li>
+<li><a href="usage.html">Usage</a></li>
+<li><a href="documentation.html">Documentation</a></li>
+<li><a href="download.html">Download</a></li>
+<li><a href="contact.html">Contact</a></li>
+</ul>
+</div>
+</div>
+<div id="content">
+<h3>What is Playrec?</h3>
+<br /><b>UPDATED: Playrec is now hosted on <a href="https://github.com/PlayrecForMatlab">GitHub</a>.  Please contribute updates to help improve Playrec.</b><br /><br />
+<br /><b>UPDATED: Playrec is now compatible with <a href="http://www.octave.org/">Octave 3.0</a> as well as Matlab.</b><br /><br />
+Playrec is a Matlab and Octave utility (MEX file) that provides simple yet versatile access to soundcards using <a href="http://www.portaudio.com/">PortAudio</a>, a free, open-source audio I/O library.  It can be used on different platforms (Windows, Macintosh, Unix) and access the soundcard via different host API including ASIO, WMME and DirectSound under Windows.<br />
+<br />
+Playrec's main features include:
+<dl>
+<dt>Non-blocking soundcard access.</dt><dd>All samples are buffered so Matlab can continue with other processing whilst output and recording occur.</dd>
+<dt>Continuous play and record with no glitches.</dt><dd>All new output samples are automatically appended to any remaining samples. This makes it possible for the audio data to be generated as required, the only limit being the processing power of the computer. Recording in multiple sections without missed samples can also easily be achieved.</dd>
+<dt>Minimal configuration.</dt><dd>A list of all available devices can be easily obtained.  Configuration then just requires the sample rate and the unique id of the device(s) to be used for output and/or recording.  There is no need to specify how much buffering is required as this is all handled dynamically.</dd>
+<dt>No imposed sample count restrictions.</dt><dd>There is no limit imposed to restrict the minimum or maximum number of samples that can be passed to the utility at any one time, the only restrictions are those due to limitations in available memory or processing power.</dd>
+<dt>Multi-channel soundcard support.</dt><dd>The utility was specifically designed to simplify working with soundcards with any number of channels: output samples only need to be provided for those channels which are not zero, and samples will only be recorded on channels specified.  This reduces memory usage and makes accessing arbitrary channels on the device very simple.  Additionally because this information is provided with the samples, different sets of channels can be used without the need for reconfiguration.</dd>
+<dt>Multiple platform and host API support.</dt><dd>By using PortAudio to access the soundcard, Playrec should function on all platforms and with all host APIs that PortAudio supports.</dd>
+</dl>
+
+To use this utility it must first be downloaded and compiled, as described in <a href="compiling.html">Getting Started</a>.  This should be fairly easy so please do try it and let me know how you get on by <a href="contact.html">contacting me</a>.<br />
+<br />
+This utility was initially written as part of a Robert Humphrey's MEng project for <a href="http://www.york.ac.uk/">The University of York</a>, UK, in 2006.  This was undertaken at <a href="http://www.speech.kth.se/">TMH (Speech, Music and Hearing)</a> at <a href="http://www.kth.se/?l=en">The Royal Institute of Technology (KTH)</a> in Stockholm and was funded by <a href="http://www.stint.se/index.php?lang=1">The Swedish Foundation for International Cooperation in Research and Higher Education (STINT)</a>.  The project was titled Automatic Speaker Location Detection for use in Ambisonic Systems.
+</div><div id="footer"><div id="copy">&copy; 2008-2014 Robert Humphrey</div><a href="license.html">Software License</a></div></div>
+<script src="javascripts/scale.fix.js"></script>
+<script type="text/javascript">
+	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+	document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+try {
+	var pageTracker = _gat._getTracker("UA-3319302-1");
+	pageTracker._trackPageview();
+} catch(err) {}
+</script>
+</body></html>
+
